Dropping top margin from first h2 of the page content (to avoid dodgy alignment)

--- a/builders/html/assets/css/base.css
+++ b/builders/html/assets/css/base.css
@@ -11407,6 +11407,10 @@ h2 {
   color: #ffc107;
 }
 
+.body h2:first-of-type {
+  margin-top: 0;
+}
+
 .row-fix {
   position: relative;
 }
